Attemp to fix issues with building the application.